Added basic UI for RPS game

--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
     <head>
         <title>Rock Paper Scissors</title>
         <meta charset="UTF-8">
+        <script src="scripts/rps-game.js" defer></script>
     </head>
     <body>
-        <script src="scripts/rps-game.js">
-        </script>
+        <button class="player-selection">Rock</button>
+        <button class="player-selection">Paper</button>
+        <button class="player-selection">Scissors</button>
+
+        <div id="results"></div>
     </body>
 </html>
