Minor changes to functions and added reset button on UI

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <button class="player-selection">Rock</button>
         <button class="player-selection">Paper</button>
         <button class="player-selection">Scissors</button>
+        <button id="reset-game">Reset Game</button>
 
         <div id="results"></div>
     </body>
