Changed win condition

--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
         <script src="scripts/rps-game.js" defer></script>
     </head>
     <body>
+        <h1>Rock Paper Scissors</h1>
+        <p><strong>Win condition:</strong> First to 5</p>
         <div id="scoreboard">
-            <p>Running Score:</p>
+            <p><strong>Running Score:</strong></p>
             <p>Player <span class="player score">0</span></p>
             <p>Computer <span class="computer score">0</span></p>
         </div>
+        <p><strong>Play:</strong></p>
         <button class="player-selection">Rock</button>
         <button class="player-selection">Paper</button>
         <button class="player-selection">Scissors</button>
